upd: add helpers, animation templates, html-loader

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,2 @@
-@import "@scss/nullstyle.scss";
-@import "@scss/variables.scss";
-@import "@scss/templates.scss";
-@import "@scss/mixins.scss";
+@import "./resources/common.scss";
+
