--- a/src/css/nullstyle.css
+++ b/src/css/nullstyle.css
@@ -25,6 +25,7 @@ html, body {
   font-family: "Arial";
   background-color: #333;
   color: #fff;
+scroll-behavior: smooth;
 }
 
 input, button, textarea {
