--- a/src/scss/resources/nullstyle.scss
+++ b/src/scss/resources/nullstyle.scss
@@ -1,4 +1,4 @@
-@import '@scss/variables.scss';
+@import './variables.scss';
 
 * {
     padding: 0;
@@ -23,10 +23,11 @@ html, body {
     width: 100%;
     font-size: 100%;
     line-height: 1;
-    font-weight: 600;
-    font-family: "Arial";
-    background-color: #333;
-    color: #fff;
+    font-weight: 400;
+    font-family: $georgia;
+    background-color: $white;
+    color: $darkGray;
+    scroll-behavior: smooth;
 }
 
 input, button, textarea {
